# fastq-fix-i5

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: main.rs
tests/: cli.rs
